--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-paypal-express-checkout": "^1.0.5",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1",
+    "reactstrap": "^8.4.1",
     "styled-components": "^5.0.1"
   },
   "scripts": {
