--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1",
     "reactstrap": "^8.4.1",
+    "serve": "^11.3.1",
     "styled-components": "^5.0.1"
   },
   "scripts": {
